<resources>
    <string name="app_name">Proterview</string>
    <string name="about_us">About Us</string>
    <string name="share">Share</string>

    <string name="title_activity_home">Questions</string>
    <string name="tag_all">All</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="questions">Questions</string>
    <string name="question_detail_hint">Enter Question Detail</string>
    <string name="question_company">Which company ask the question?</string>
    <string name="question_tags">Tags (Ex: Algorithm, Database, etc.)</string>
    <string name="question_add_button">Add Question</string>
    <string name="reply">Reply</string>

    <!--Log in page string -->
    <string name="email_hint">Enter Email</string>
    <string name="psw_hint">Enter Password</string>
    <string name="psw_confirm_hint">Re-Enter Password</string>
    <string name="login_text">Log In</string>
    <string name="link_to_register">New to Proterview? Register here.</string>

    <!--Registration page string -->
    <string name="register_text">Register</string>
    <string name="link_to_login">Already registered! Login Me.</string>

    <!--Log out -->
    <string name="action_logout">Log Out</string>

    <!--Offline Data -->
    <string name="LOGIN_PREFS">tcss450.uw.edu.mobileproject.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="USER">user</string>

    <!-- Share feature -->
    <string name="send_to">Share the question via…</string>

    <!-- About us Strings-->
    <string name="kyle">Kyle Doan</string>
    <string name="weiwei">Weiwei Shi</string>

    <!--About Us details-->
    <string name="kyle_details">CSS @ UWT, Passion about AI, Database and Machine Learning</string>
    <string name="weiwei_details">CSS @ UWT, Passion about Data/AR/VR</string>

    <!--SQLite Query-->
    <string name="CREATE_QUESTION_SQL">CREATE TABLE IF NOT EXISTS Questions
        (QuestID INT PRIMARY KEY, email TEXT, DatePost TEXT, QuestDetail TEXT, Company TEXT)
    </string>
    <string name="DROP_QUESTION_SQL">DROP TABLE IF EXISTS Questions</string>
    <string name="CREATE_TAG_SQL">CREATE TABLE IF NOT EXISTS Tags
        (TagName TEXT, QuestID INT, PRIMARY KEY(TagName, QuestID))</string>
    <string name="DROP_TAG_SQL">DROP TABLE IF EXISTS Tags</string>
    <string name="CREATE_ANSWER_SQL">CREATE TABLE IF NOT EXISTS Answers
        (AnsID INT PRIMARY KEY, QuestID INT, email TEXT, DatePost TEXT, AnsDetail TEXT)
    </string>
    <string name="DROP_ANSWER_SQL">DROP TABLE IF EXISTS Answers</string>
</resources>
