<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="tcss450.uw.edu.mobileproject.AboutUsFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"

        android:text="@string/about_us"
        android:textColor="@color/question_box"
        android:textSize="30sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="169dp"
            android:layout_column="0"
            android:layout_row="0"
            android:src="@drawable/kyle" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="112dp"
            android:layout_height="140dp"
            android:layout_column="3"
            android:layout_gravity="center"
            android:layout_row="0"
            android:gravity="center"
            android:text="@string/kyle_details"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/question_box" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="214dp"
            android:layout_column="0"
            android:layout_row="1"
            android:src="@drawable/dolphin" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="163dp"
            android:layout_column="1"
            android:layout_row="0"
            android:gravity="center"
            android:text="@string/kyle"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/question_box" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="239dp"
            android:layout_column="1"
            android:layout_row="1"
            android:gravity="center"
            android:text="@string/weiwei"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/question_box" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="112dp"
            android:layout_height="231dp"
            android:layout_column="3"
            android:layout_gravity="center"
            android:layout_row="1"
            android:gravity="center_horizontal"
            android:text="@string/weiwei_details"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/question_box" />


    </GridLayout>

</RelativeLayout>
